--- a/index.html
+++ b/index.html
@@ -12,7 +12,57 @@
 	<section class="container">
 		<article class="song">
 			<figure class="image">
-				<img src="img/songs/test.jpg" alt="Chomin Kimvex">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p>
+		</article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p>
+		</article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p>
+		</article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p>
+		</article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p>
+		</article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
 			</figure>
 			<p class="name">
 				Girl
