Agregamos mejoras al documento, las imagenes con bordes y mejoramos el stylus

--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
 	<meta charset="utf-8">
 	<title>Sfotipy</title>
 	<link rel="stylesheet" href="css/estilos.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header class="header">
-		
+		<a href="#" class="button-menu">*</a>
+		<nav class="menu">
+			<ul class="list">
+				<li class="item">
+					<a href="#">Top Hits</a>
+				</li><li class="item">
+					<a href="#">Play List</a>
+				</li><li class="item">
+					<a href="#">Top Hits</a>
+				</li><li class="item">
+					<a href="#">Top Hits</a>
+				</li><li class="item">
+					<a href="#">Top Hits</a>
+				</li><li class="item">
+					<a href="#">Top Hits</a>
+				</li><li class="item">
+					<a href="#">Top Hits</a>
+				</li>
+			</ul>
+		</nav>
+		<div class="title">
+			<p>
+				Top Hits
+			</p>
+		</div>
 	</header>
 	<section class="container">
 		<article class="song">
