--- a/index.html
+++ b/index.html
@@ -7,33 +7,75 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<header class="header">
-		<a href="#" class="button-menu">*</a>
+	<header class="header relative boder-bottom">
+		<a href="#" class="button-menu icon-menu"></a>
 		<nav class="menu">
 			<ul class="list">
 				<li class="item">
 					<a href="#">Top Hits</a>
-				</li><li class="item">
+				</li>
+				<li class="item">
 					<a href="#">Play List</a>
-				</li><li class="item">
+				</li>
+				<li class="item">
 					<a href="#">Top Hits</a>
-				</li><li class="item">
+				</li>
+				<li class="item">
 					<a href="#">Top Hits</a>
-				</li><li class="item">
+				</li>
+				<li class="item">
 					<a href="#">Top Hits</a>
-				</li><li class="item">
+				</li>
+				<li class="item">
 					<a href="#">Top Hits</a>
-				</li><li class="item">
+				</li>
+				<li class="item">
 					<a href="#">Top Hits</a>
 				</li>
 			</ul>
 		</nav>
 		<div class="title">
-			<p>
+			<span>
 				Top Hits
-			</p>
+			</span>
 		</div>
 	</header>
+	<section class="playing small center-block">
+		<figure class="image relative"> 
+			<img src="img/songs/test-playing.jpg" width="320" height="320" alt="Come Get It Bae Pharrell Williams">
+			<div class="actions padding right-text">
+				<a href="" class="action icon-add"></a>
+				<a href="" class="action icon-love"></a>
+				<a href="" class="action icon-share"></a>
+			</div>
+		</figure>
+		<div class="progress">
+			<span class="min">0:45</span>
+			<div class="total">
+				<div class="state">
+					<div class="circle">
+						
+					</div>
+				</div>
+			</div>
+			<span class="max">4:10</span>
+		</div>
+		<div class="description center-text">
+			<p class="name">
+				Come Get It Bae
+			</p>
+			<p class="author">
+				Pharrell Williams
+			</p>
+		</div>
+		<div class="play center-text">
+			<a href="" class="action icon-prev"></a>
+			<a href="" class="action icon-play"></a>
+			<a href="" class="action icon-next"></a>
+			<a href="" class="action icon-random"></a>
+			<a href="" class="action icon-vol"></a>
+		</div>
+	</section>
 	<section class="container">
 		<article class="song">
 			<figure class="image">
