--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 				<a href="" class="action icon-share"></a>
 			</div>
 		</figure>
-		<div class="progress">
+		<div class="padding">
+			<div class="progress">
 			<span class="min">0:45</span>
 			<div class="total">
 				<div class="state">
@@ -59,21 +60,22 @@
 				</div>
 			</div>
 			<span class="max">4:10</span>
-		</div>
-		<div class="description center-text">
-			<p class="name">
-				Come Get It Bae
-			</p>
-			<p class="author">
-				Pharrell Williams
-			</p>
-		</div>
-		<div class="play center-text">
-			<a href="" class="action icon-prev"></a>
-			<a href="" class="action icon-play"></a>
-			<a href="" class="action icon-next"></a>
-			<a href="" class="action icon-random"></a>
-			<a href="" class="action icon-vol"></a>
+			</div>
+			<div class="description center-text border-bottom">
+				<p class="name">
+					Come Get It Bae
+				</p>
+				<p class="author">
+					Pharrell Williams
+				</p>
+			</div>
+			<div class="play center-text padding-tb">
+				<a href="" class="action gray icon-prev"></a>
+				<a href="" class="action gray icon-play"></a>
+				<a href="" class="action gray icon-next"></a>
+				<a href="" class="action gray icon-random"></a>
+				<a href="" class="action gray icon-vol"></a>
+			</div>
 		</div>
 	</section>
 	<section class="container">
