Agregamos el meta viewport que hacia falta

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=divice-width, initial-scale=1, maximum-scale=1">
 	<title>Sfotipy</title>
 	<link rel="stylesheet" href="css/estilos.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
