--- a/index.html
+++ b/index.html
@@ -8,30 +8,41 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<header class="header relative boder-bottom">
+	<header class="header relative border-bottom">
+		<div class="logo">
+			<div class="wrap center-block">
+				<figure class="image isotipo left">
+					<img src="img/logo.png" alt="Sfotipy">
+				</figure>
+				<div class="user right">
+					<figure class="avatar round left">
+						<img src="img/avatar/WIN_20141203_104707.JPG" alt="@benjachomin" width="38" height="38">
+					</figure>
+					<span class="left username">@benjachomin</span>
+				</div>
+				<div class="search right">
+					<form action="" class="relative">
+						<span class="icon-search search-icon"></span>
+						<input class="input" type="text" placeholder="Buscar">
+						<span class="close-icon">X</span>
+					</form>
+				</div>
+			</div>
+		</div>
 		<a href="#" class="button-menu icon-menu"></a>
 		<nav class="menu">
-			<ul class="list">
+			<ul class="list center-block wrap">
 				<li class="item">
 					<a href="#">Top Hits</a>
 				</li>
 				<li class="item">
-					<a href="#">Play List</a>
+					<a href="#">Profile</a>
 				</li>
 				<li class="item">
-					<a href="#">Top Hits</a>
+					<a href="#">Settings</a>
 				</li>
 				<li class="item">
-					<a href="#">Top Hits</a>
-				</li>
-				<li class="item">
-					<a href="#">Top Hits</a>
-				</li>
-				<li class="item">
-					<a href="#">Top Hits</a>
-				</li>
-				<li class="item">
-					<a href="#">Top Hits</a>
+					<a href="#">Playlist</a>
 				</li>
 			</ul>
 		</nav>
@@ -41,42 +52,136 @@
 			</span>
 		</div>
 	</header>
-	<section class="playing small center-block">
-		<figure class="image relative"> 
-			<img src="img/songs/test-playing.jpg" width="320" height="320" alt="Come Get It Bae Pharrell Williams">
-			<div class="actions padding right-text">
-				<a href="" class="action icon-add"></a>
-				<a href="" class="action icon-love"></a>
-				<a href="" class="action icon-share"></a>
-			</div>
-		</figure>
-		<div class="padding">
-			<div class="progress">
-			<span class="min">0:45</span>
-			<div class="total">
-				<div class="state">
-					<div class="circle">
-						
+	<section class="playing small medium large">
+		<div class="music">
+			<figure class="image relative"> 
+				<img src="img/songs/test-playing.jpg" width="320" height="320" alt="Come Get It Bae Pharrell Williams">
+				<div class="actions padding right-text">
+					<a href="" class="action icon-add"></a>
+					<a href="" class="action icon-love"></a>
+					<a href="" class="action icon-share"></a>
+				</div>
+			</figure>
+			<div class="padding">
+				<div class="progress">
+				<span class="min">0:45</span>
+				<div class="total">
+					<div class="state">
+						<div class="circle">
+							
+						</div>
 					</div>
 				</div>
+				<span class="max">4:10</span>
+				</div>
+				<div class="description center-text border-bottom">
+					<p class="name">
+						Come Get It Bae
+					</p>
+					<p class="author">
+						Pharrell Williams
+					</p>
+				</div>
+				<div class="play center-text padding-tb">
+					<a href="" class="action gray icon-prev"></a>
+					<a href="" class="action gray icon-play"></a>
+					<a href="" class="action gray icon-next"></a>
+					<a href="" class="action gray icon-random"></a>
+					<a href="" class="action gray icon-vol"></a>
+				</div>
 			</div>
-			<span class="max">4:10</span>
-			</div>
-			<div class="description center-text border-bottom">
-				<p class="name">
-					Come Get It Bae
-				</p>
-				<p class="author">
-					Pharrell Williams
-				</p>
-			</div>
-			<div class="play center-text padding-tb">
-				<a href="" class="action gray icon-prev"></a>
-				<a href="" class="action gray icon-play"></a>
-				<a href="" class="action gray icon-next"></a>
-				<a href="" class="action gray icon-random"></a>
-				<a href="" class="action gray icon-vol"></a>
-			</div>
+		</div>
+		<div class="playlist right">
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Pharrell Williams
+			</p>
+			<ul class="list">
+				<li class="item border-bottom">
+					<span>
+						Sophie Ellis-Bextor
+					</span>
+					<span class="right">		
+					<a href="#" class="action gray icon-add"></a>
+					<a href="#" class="action gray icon-love"></a>
+					<a href="#" class="action gray icon-share"></a>
+					</span>
+				</li><li class="item border-bottom">
+					<span>
+						Sophie Ellis-Bextor
+					</span>
+					<span class="right">		
+					<a href="#" class="action gray icon-add"></a>
+					<a href="#" class="action gray icon-love"></a>
+					<a href="#" class="action gray icon-share"></a>
+					</span>
+				</li><li class="item border-bottom">
+					<span>
+						Sophie Ellis-Bextor
+					</span>
+					<span class="right">		
+					<a href="#" class="action gray icon-add"></a>
+					<a href="#" class="action gray icon-love"></a>
+					<a href="#" class="action gray icon-share"></a>
+					</span>
+				</li><li class="item border-bottom">
+					<span>
+						Sophie Ellis-Bextor
+					</span>
+					<span class="right">		
+					<a href="#" class="action gray icon-add"></a>
+					<a href="#" class="action gray icon-love"></a>
+					<a href="#" class="action gray icon-share"></a>
+					</span>
+				</li><li class="item border-bottom">
+					<span>
+						Sophie Ellis-Bextor
+					</span>
+					<span class="right">		
+					<a href="#" class="action gray icon-add"></a>
+					<a href="#" class="action gray icon-love"></a>
+					<a href="#" class="action gray icon-share"></a>
+					</span>
+				</li><li class="item border-bottom">
+					<span>
+						Sophie Ellis-Bextor
+					</span>
+					<span class="right">		
+					<a href="#" class="action gray icon-add"></a>
+					<a href="#" class="action gray icon-love"></a>
+					<a href="#" class="action gray icon-share"></a>
+					</span>
+				</li><li class="item border-bottom">
+					<span>
+						Sophie Ellis-Bextor
+					</span>
+					<span class="right">		
+					<a href="#" class="action gray icon-add"></a>
+					<a href="#" class="action gray icon-love"></a>
+					<a href="#" class="action gray icon-share"></a>
+					</span>
+				</li><li class="item border-bottom">
+					<span>
+						Sophie Ellis-Bextor
+					</span>
+					<span class="right">		
+					<a href="#" class="action gray icon-add"></a>
+					<a href="#" class="action gray icon-love"></a>
+					<a href="#" class="action gray icon-share"></a>
+					</span>
+				</li><li class="item border-bottom">
+					<span>
+						Sophie Ellis-Bextor
+					</span>
+					<span class="right">		
+					<a href="#" class="action gray icon-add"></a>
+					<a href="#" class="action gray icon-love"></a>
+					<a href="#" class="action gray icon-share"></a>
+					</span>
+				</li>
+			</ul>
 		</div>
 	</section>
 	<section class="container">
@@ -91,6 +196,96 @@
 				Chomin Kimvex
 			</p>
 		</article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p></article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p></article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p></article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p></article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p></article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p></article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p></article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p></article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p></article><article class="song">
+			<figure class="image">
+				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
+			</figure>
+			<p class="name">
+				Girl
+			</p>
+			<p class="author">
+				Chomin Kimvex
+			</p></article><article class="song">
 			<figure class="image">
 				<img src="img/songs/test.jpg" alt="Chomin Kimvex" width="128" height="128">
 			</figure>
